--- a/views/users.html
+++ b/views/users.html
@@ -4,11 +4,22 @@
     <title> Express Sequelize Enrichment </title>
   </head>
   <body>
-    <div id="users">
-      <h1 id="name"> {{user}} </h1>
-      <h2 id="award"> {{award}} </h2>
-      <h2 id="mentor"> {{mentor}} </h2>
+    <div id="app">
+      
     </div>
 
+    <div id="user">
+      <h1> Student Mentor Data </h1>
+      <form method="post" action="/users">
+        <input id="name" placeholder="{{user}}"></input>
+        <button id="add-user">Add User</button>
+      </form>
+    </div>
+
+    <ul id="students">
+      {%for user in users %}
+        <li><a href="/users/{{ page.route }}">{{ user.name }}</a></li>
+      {% endfor %}
+    </ul>
   </body>
 </html>
